k8s/Production/initiatives-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: initiatives-db
  labels:
    app: initiatives-db
    technology: mssql
    product: octava
    tier: backend
spec:
  type: ExternalName
  externalName: octavadb2.database.windows.net
