k8s/Production/wordpress-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
  labels:
    app: wordpress-db
    technology: mysql
    product: octava
    tier: backend
spec:
  type: ExternalName
  externalName: octava-wordpressdb.mysql.database.azure.com
