k8s/Production/octava-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: octava-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - octava.edmonton.ca
    secretName: production-tls
  rules:
  - host: octava.edmonton.ca
    http:
      paths:
      - path: /plugins/initiatives
        backend:
          serviceName: initiatives-webapi
          servicePort: 5000
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
